# TENANTRA-New

./: .bandit.yaml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_EDITMSG  CONTRIBUTING.md  DEPLOY.md  FETCH_HEAD  GEMINI.md  LICENSE  MASTER_CHANGELOG.md  MASTER_CHANGELOG_IMPACT_MATRIX.md  MERGED_TASK_LIST.md  Makefile  ORIG_HEAD  README.md  README_OptionB_Cleanup.md  README_Rebuild_vFinal.txt  SECURITY_ANALYSIS_TODO.md  Tenantra_Support_Documentation.md  Tenantra_Unified_Project_and_Rollout_Plan.md  config  index  new_task_list.md  package.json  packed-refs  playwright.config.ts  pyproject.toml  run_migrate_fixed.sh  tenantra_control_menu.ps1_old
backend/: .ci_trigger  Dockerfile  Dockerfile_1  bandit.yaml  dev_server.py  mypy.ini  promote_admin.py  pyproject.toml  pytest.ini  requirements.txt
backend/.venv_security/: pyvenv.cfg
backend/alembic/: env.py  script.py.mako
backend/app/: bootstrap.py  celery_app.py  database.py  logging_conf.py  main.py  seed.py
backend/scripts/: check_migrations.py  check_untracked_migrations.py  cleanup_integrity.py  db_check.py  db_sanity.py  db_seed.py  import_modules_from_csv.py  redis_healthcheck.py  seed_demo_telemetry.py  seed_modules_from_csv.py  verify_migration_tracking.py
backend/tests/: __init__.py  conftest.py  debug_auth.py  helpers.py  test_access_controls.py  test_agent_results.py  test_agents.py  test_app_settings_routes.py  test_auth.py  test_auth_flows.py  test_aws_iam_baseline.py  test_aws_live_optin.py  test_compliance_trends.py  test_feature_flags.py  (+24 more)
(+617 files in other folders)
