[project]
name = "tenantra-backend"
version = "0.1.0"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions", "venv", ".venv"]
fix = false

[tool.ruff.lint]
# Focus linting on critical error classes to keep legacy modules passing CI while we
# gradually modernize the style across the codebase.
select = ["E9", "F63", "F7", "F82"]
ignore = [
  "E203",  # whitespace before ':' (black compatibility)
  "E501",  # line length handled by formatter or consciously
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["app"]
known-third-party = ["fastapi","sqlalchemy","pydantic"]

[tool.pyprojectx]
# placeholder to avoid build tools complaining if used; harmless
